--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-	  <meta name="description" content="Olivia's Test Site!." />
-    <link rel="canonical" href="https://oliviaclausi.com/" />
-    <title>This is my test site.</title>
+	  <meta name="description" content="Ginny" />
+
+    <title>This is Ginny.</title>
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -13,23 +13,28 @@
 <body>
     <!--header-->
     <div class="header">
-      <h1>Me</h1>
-      <p>I am me.</p>
+      <h1>THE GINNY CONNECTION</h1>
     </div>
 
   <!--main body of the page-->
 	<div>
     <!--some text-->
 		<p class = "textbox">
-        Hi!
-      <br>This is the second line.</br>
+        THE GINNY CONNECTION
+      <br>---</br>
     </p>
   	<!--	<img src='images/photo.jpg' alt='tiny olivia photo'/> -->
     <!--an image that links to /vincent-->
-    <a href="https://oliviaclausi.com/vincent">
-        <img src='images/blanket_vincent.jpg' class = "images floatleft" alt='vin'/>
-    </a>
-    <img src="images/basement_vincent.jpg" class="images floatright" alt="charley"/>
+
+    <img src="images/ginny1.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny2.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny3.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny4.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny5.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny6.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny7.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny8.png" class="images floatright" alt="ginny"/>
+    <img src="images/ginny9.png" class="images floatright" alt="ginny"/>
 	</div>
 
   <!-- this clears the float style so the footer doesn't get messed up -->
