--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
   	<!--	<img src='images/photo.jpg' alt='tiny olivia photo'/> -->
     <!--an image that links to /vincent-->
 
-    <img src="images/ginny1.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny2.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny3.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny4.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny5.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny6.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny7.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny8.png" class="images floatright" alt="ginny"/>
-    <img src="images/ginny9.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny1.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny2.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny3.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny4.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny5.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny6.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny7.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny8.png" class="images floatright" alt="ginny"/>
+    <img src="images/Ginny9.png" class="images floatright" alt="ginny"/>
 	</div>
 
   <!-- this clears the float style so the footer doesn't get messed up -->
